--- a/style.css
+++ b/style.css
@@ -35,7 +35,14 @@ h1 {
     border-style: dotted;
     border-color: rgb(36, 0, 53);
   }
-  
+
+  .moon {
+    position:relative;
+    top: -225px;
+    text-align: center;
+    z-index: -1;
+    opacity: .3
+  }
   
   /* unvisited link */
   a:link {
@@ -56,4 +63,61 @@ h1 {
     a:active {
       color: green;
     }
+
+    .box {
+      background-color: green;
+      width: 100px;
+      height: 100px;
+      border: 1px solid black;
+      overflow: scroll;
+      margin: 10px;
+    }
+    .flexBox {
+      display: flex;
+      background-color: plum;
+    }
+    .flexBox > div {
+      background-color: blanchedalmond;
+      margin: 10px;
+      padding: 10px;
+      font-size: 30px;
+    }
+
+    .animation {
+      margin: 10px;
+      width: 100px;
+      height: 100px;
+      background-color: rgb(255, 0, 234);
+      animation-name: colorChange;
+      animation-duration: 5s;
+    }
+    
+    @keyframes colorChange {
+      from {background-color: rgb(255, 0, 234);}
+      to {background-color: rgb(255, 60, 0);}
+    }
+
+    .tooltip {
+      position: relative;
+      display: inline-block;
+      border-bottom: 1px dotted rgb(39, 39, 39);
+    }
+
+    .tooltip .tooltiptext {
+      visibility: hidden;
+      width: 200px;
+      background-color: lightgray;
+      color: black;
+      text-align: center;
+      border-radius: 6px;
+      padding: 5px 0;
+    
+      position: relative;
+      z-index: 1;
+    }
+
+    .tooltip:hover .tooltiptext {
+      visibility: visible;
+    }
+    
   
